--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "engines": {
-    "node": "20.x"
+    "node": "18.x"
   },
   "scripts": {
     "start": "node server.js",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "puppeteer": "^22.13.1"
+    "puppeteer-core": "^22.13.1",
+    "chrome-aws-lambda": "^10.1.0"
   }
 }
