--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
     "node": "20.x"
   },
   "scripts": {
-    "start": "node server.js",
     "build": "echo 'No build step required'"
   },
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "express": "^4.19.2",
-    "puppeteer-core": "^22.13.1",
-    "chrome-aws-lambda": "^10.1.0"
+    "puppeteer-core": "^22.13.1"
   }
 }
