--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "server",
   "version": "1.0.0",
   "engines": {
-    "node": "20.x"
+    "node": "18.x"
   },
   "scripts": {
+    "start": "node server.js",
     "build": "echo 'No build step required'"
   },
   "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
     "express": "^4.19.2",
-    "puppeteer-core": "^22.13.1"
+    "puppeteer-core": "10.4.0",
+    "chrome-aws-lambda": "10.1.0"
   }
 }
